Revamp UI using CSS and remove unused files

--- a/components/html/hero.html
+++ b/components/html/hero.html
@@ -17,7 +17,7 @@
                 <a href="https://github.com/yuechen2001" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
-        <div class="scroll-indicator">
+        <div class="scroll-indicator" id = "scroll-indicator">
             <div class="mouse"></div>
             <p>Scroll Down</p>
         </div>
