FIx more broken links

--- a/components/html/projects.html
+++ b/components/html/projects.html
@@ -22,7 +22,7 @@
                         <span>ethers.js</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/yuechen2001" class="btn outline-btn" target="_blank">GitHub <i class="fab fa-github"></i></a>
+                        <a href="https://github.com/yuechen2001/blockchain-digimon" class="btn outline-btn" target="_blank">GitHub <i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                         <span>Blockchain</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/yuechen2001" class="btn outline-btn" target="_blank">GitHub <i class="fab fa-github"></i></a>
+                        <a href="https://github.com/yuechen2001/hack-harvard-24" class="btn outline-btn" target="_blank">GitHub <i class="fab fa-github"></i></a>
                         <a href="https://devpost.com/software/energy-trading" class="btn outline-btn" target="_blank">Documentation <i class="fas fa-book"></i></a>
                     </div>
                 </div>
