Update programming languages

--- a/components/html/skills.html
+++ b/components/html/skills.html
@@ -24,6 +24,9 @@
                     <div class="skill-item" data-name="C">
                         <h4>C#</h4>
                     </div>
+                    <div class="skill-item" data-name="C">
+                        <h4>C</h4>
+                    </div>
                     <div class="skill-item" data-name="SQL">
                         <h4>SQL</h4>
                     </div>
