Update experiences and skills sections

--- a/components/html/skills.html
+++ b/components/html/skills.html
@@ -15,23 +15,26 @@
                     <div class="skill-item" data-name="Java">
                         <h4>Java</h4>
                     </div>
-                    <div class="skill-item" data-name="JavaScript">
-                        <h4>JavaScript</h4>
-                    </div>
-                    <div class="skill-item" data-name="TypeScript">
-                        <h4>TypeScript</h4>
-                    </div>
-                    <div class="skill-item" data-name="C">
-                        <h4>C#</h4>
-                    </div>
                     <div class="skill-item" data-name="C">
                         <h4>C</h4>
                     </div>
                     <div class="skill-item" data-name="SQL">
                         <h4>SQL</h4>
                     </div>
+                    <div class="skill-item" data-name="GraphQL">
+                        <h4>GraphQL</h4>
+                    </div>
                     <div class="skill-item" data-name="Dart">
                         <h4>Dart</h4>
+                    </div>
+                    <div class="skill-item" data-name="JavaScript">
+                        <h4>JavaScript</h4>
+                    </div>
+                    <div class="skill-item" data-name="TypeScript">
+                        <h4>TypeScript</h4>
+                    </div>
+                    <div class="skill-item" data-name="Apex">
+                        <h4>Apex</h4>
                     </div>
                     <div class="skill-item" data-name="Solidity">
                         <h4>Solidity</h4>
@@ -39,36 +42,43 @@
                 </div>
             </div>
             <div class="skills-category">
-                <h3>Frameworks</h3>
+                <h3>Frameworks & Tools</h3>
                 <div class="skills-grid">
+                    <div class="skill-item" data-name="React">
+                        <h4>React</h4>
+                    </div>
+                    <div class="skill-item" data-name="Next.js">
+                        <h4>Next.js</h4>
+                    </div>
                     <div class="skill-item" data-name="Flutter">
                         <h4>Flutter</h4>
-                    </div>
-                    <div class="skill-item" data-name="ReactJS">
-                        <h4>ReactJS</h4>
-                    </div>
-                    <div class="skill-item" data-name="NextJS">
-                        <h4>NextJS</h4>
                     </div>
                     <div class="skill-item" data-name="Prisma">
                         <h4>Prisma</h4>
                     </div>
-                    <div class="skill-item" data-name="Grafana k6">
-                        <h4>Grafana k6</h4>
-                    </div>
                     <div class="skill-item" data-name="Hardhat">
                         <h4>Hardhat</h4>
                     </div>
-                    <div class="skill-item" data-name="Salesforce">
-                        <h4>Salesforce</h4>
+                    <div class="skill-item" data-name="Salesforce Agentforce">
+                        <h4>Salesforce Agentforce</h4>
+                    </div>
+
+                    <div class="skill-item" data-name="Wagmi">
+                        <h4>Wagmi</h4>
+                    </div>
+                    <div class="skill-item" data-name="ethers.js">
+                        <h4>ethers.js</h4>
+                    </div>
+                    <div class="skill-item" data-name="Web3.js">
+                        <h4>Web3.js</h4>
                     </div>
                 </div>
             </div>
             <div class="skills-category">
                 <h3>Databases</h3>
                 <div class="skills-grid">
-                    <div class="skill-item" data-name="Cloud Firestore">
-                        <h4>Cloud Firestore</h4>
+                    <div class="skill-item" data-name="PostgreSQL">
+                        <h4>PostgreSQL</h4>
                     </div>
                     <div class="skill-item" data-name="MongoDB">
                         <h4>MongoDB</h4>
@@ -76,11 +86,11 @@
                     <div class="skill-item" data-name="Supabase">
                         <h4>Supabase</h4>
                     </div>
+                    <div class="skill-item" data-name="Cloud Firestore">
+                        <h4>Cloud Firestore</h4>
+                    </div>
                     <div class="skill-item" data-name="SQLite">
                         <h4>SQLite</h4>
-                    </div>
-                    <div class="skill-item" data-name="PostgreSQL">
-                        <h4>PostgreSQL</h4>
                     </div>
                 </div>
             </div>
