--- a/components/html/skills.html
+++ b/components/html/skills.html
@@ -9,29 +9,32 @@
             <div class="skills-category">
                 <h3>Programming Languages</h3>
                 <div class="skills-grid">
-                    <div class="skill-item" data-name="Python">
-                        <h4>Python</h4>
-                    </div>
                     <div class="skill-item" data-name="Java">
                         <h4>Java</h4>
                     </div>
-                    <div class="skill-item" data-name="C">
-                        <h4>C</h4>
-                    </div>
-                    <div class="skill-item" data-name="SQL">
-                        <h4>SQL</h4>
-                    </div>
-                    <div class="skill-item" data-name="GraphQL">
-                        <h4>GraphQL</h4>
-                    </div>
-                    <div class="skill-item" data-name="Dart">
-                        <h4>Dart</h4>
+                    <div class="skill-item" data-name="Python">
+                        <h4>Python</h4>
                     </div>
                     <div class="skill-item" data-name="JavaScript">
                         <h4>JavaScript</h4>
                     </div>
                     <div class="skill-item" data-name="TypeScript">
                         <h4>TypeScript</h4>
+                    </div>
+                    <div class="skill-item" data-name="C">
+                        <h4>C</h4>
+                    </div>
+                    <div class="skill-item" data-name="C#">
+                        <h4>C#</h4>
+                    </div>
+                    <div class="skill-item" data-name="SQL">
+                        <h4>SQL</h4>
+                    </div>
+                    <div class="skill-item" data-name="Dart">
+                        <h4>Dart</h4>
+                    </div>
+                    <div class="skill-item" data-name="GraphQL">
+                        <h4>GraphQL</h4>
                     </div>
                     <div class="skill-item" data-name="Apex">
                         <h4>Apex</h4>
@@ -41,14 +44,21 @@
                     </div>
                 </div>
             </div>
+            
             <div class="skills-category">
-                <h3>Frameworks & Tools</h3>
+                <h3>Frameworks & Libraries</h3>
                 <div class="skills-grid">
+                    <div class="skill-item" data-name="JavaFX">
+                        <h4>JavaFX</h4>
+                    </div>
                     <div class="skill-item" data-name="React">
                         <h4>React</h4>
                     </div>
                     <div class="skill-item" data-name="Next.js">
                         <h4>Next.js</h4>
+                    </div>
+                    <div class="skill-item" data-name="TailwindCSS">
+                        <h4>TailwindCSS</h4>
                     </div>
                     <div class="skill-item" data-name="Flutter">
                         <h4>Flutter</h4>
@@ -59,10 +69,12 @@
                     <div class="skill-item" data-name="Hardhat">
                         <h4>Hardhat</h4>
                     </div>
+                    <div class="skill-item" data-name="Hasura">
+                        <h4>Hasura</h4>
+                    </div>
                     <div class="skill-item" data-name="Salesforce Agentforce">
                         <h4>Salesforce Agentforce</h4>
                     </div>
-
                     <div class="skill-item" data-name="Wagmi">
                         <h4>Wagmi</h4>
                     </div>
@@ -72,10 +84,50 @@
                     <div class="skill-item" data-name="Web3.js">
                         <h4>Web3.js</h4>
                     </div>
+                    <div class="skill-item" data-name="Firebase">
+                        <h4>Firebase</h4>
+                    </div>
+                    <div class="skill-item" data-name="Streamlit">
+                        <h4>Streamlit</h4>
+                    </div>
+                    <div class="skill-item" data-name="JUnit">
+                        <h4>JUnit</h4>
+                    </div>
+                    <div class="skill-item" data-name="Unity">
+                        <h4>Unity</h4>
+                    </div>
+                    <div class="skill-item" data-name="Grafana k6">
+                        <h4>Grafana k6</h4>
+                    </div>
+                    <div class="skill-item" data-name="CircleCI">
+                        <h4>CircleCI</h4>
+                    </div>
+                    <div class="skill-item" data-name="mitmproxy">
+                        <h4>mitmproxy</h4>
+                    </div>
+                    <div class="skill-item" data-name="Chrome DevTools">
+                        <h4>Chrome DevTools</h4>
+                    </div>
+                    <div class="skill-item" data-name="HTML5 Canvas">
+                        <h4>HTML5 Canvas</h4>
+                    </div>
+                    <div class="skill-item" data-name="GetX">
+                        <h4>GetX</h4>
+                    </div>
+                    <div class="skill-item" data-name="Bloc">
+                        <h4>Bloc</h4>
+                    </div>
+                    <div class="skill-item" data-name="OpenAI API">
+                        <h4>OpenAI API</h4>
+                    </div>
+                    <div class="skill-item" data-name="Flask">
+                        <h4>Flask</h4>
+                    </div>
                 </div>
             </div>
+            
             <div class="skills-category">
-                <h3>Databases</h3>
+                <h3>Databases & Storage</h3>
                 <div class="skills-grid">
                     <div class="skill-item" data-name="PostgreSQL">
                         <h4>PostgreSQL</h4>
@@ -91,6 +143,12 @@
                     </div>
                     <div class="skill-item" data-name="SQLite">
                         <h4>SQLite</h4>
+                    </div>
+                    <div class="skill-item" data-name="Redis">
+                        <h4>Redis</h4>
+                    </div>
+                    <div class="skill-item" data-name="HiveDB">
+                        <h4>HiveDB</h4>
                     </div>
                 </div>
             </div>
