--- a/components/html/projects.html
+++ b/components/html/projects.html
@@ -44,6 +44,7 @@
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/yuechen2001/hack-harvard-24" class="btn outline-btn" target="_blank">GitHub <i class="fab fa-github"></i></a>
+                        <a href="https://devpost.com/software/energy-trading" class="btn outline-btn" target="_blank">Documentation <i class="fas fa-book"></i></a>
                     </div>
                 </div>
             </div>
@@ -63,6 +64,7 @@
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/yuechen2001/Orbital_22-23_PDFReader" class="btn outline-btn" target="_blank">GitHub <i class="fab fa-github"></i></a>
+                        <a href="https://docs.google.com/document/d/1hauedBm6DGVDBo9x69ZBPQNvsSC6kwkMA1eUYrQt9Fo/edit?tab=t.0" class="btn outline-btn" target="_blank">Documentation <i class="fas fa-book"></i></a>
                     </div>
                 </div>
             </div>
