Replace linkedin URL

--- a/components/html/footer.html
+++ b/components/html/footer.html
@@ -4,7 +4,7 @@
         <div class="footer-content">
             <p>&copy; 2025 Yuechen Zhu. All Rights Reserved.</p>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/zhu-yuechen-1a603435/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/yuechenzhu/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/yuechen2001" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
