--- a/components/html/hero.html
+++ b/components/html/hero.html
@@ -13,7 +13,7 @@
                 <button id="contactMeBtn" class="btn primary-btn" type="button">Contact Me</button>
             </div>
             <div class="social-icons animate-text-delay-4">
-                <a href="https://www.linkedin.com/in/zhu-yuechen-1a603435/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/yuechenzhu/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/yuechen2001" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
