Update work experiences post NOC

--- a/components/html/about.html
+++ b/components/html/about.html
@@ -18,7 +18,7 @@
                 <div class="personal-info">
                     <div class="info-item">
                         <span class="info-title">Location:</span>
-                        <span class="info-value">Santa Clara, California</span>
+                        <span class="info-value">Singapore</span>
                     </div>
                     <div class="info-item">
                         <span class="info-title">Education:</span>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="info-item">
                         <span class="info-title">Degree:</span>
-                        <span class="info-value">Bachelor of Computing in Computer Science (Expected May 2026)</span>
+                        <span class="info-value">Bachelor of Computing in Computer Science (Expected December 2026)</span>
                     </div>
                     <div class="info-item">
                         <span class="info-title">GPA:</span>
