--- a/components/html/experience.html
+++ b/components/html/experience.html
@@ -10,8 +10,8 @@
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
-                    <div class="timeline-date">Aug 2024 - Present</div>
-                    <h3>Quality Engineer Intern</h3>
+                    <div class="timeline-date">Aug 2024 - Jul 2025</div>
+                    <h3>Software Engineer Intern</h3>
                     <h4>Propel Software, San Francisco</h4>
                     <ul class="experience-details">
                         <li>Improved test reliability and reduced flakiness by 60% to better simulate diverse user behaviors under load, helping ensure production stability as the user base scaled, through performance test automation with JavaScript, Grafana k6, and integration into CircleCI.</li>
